--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 </head>
 <body>
 
+  <div class="watch">
+    <div class="watch--hands">
+        <div class="watch--center"></div>
+    </div>
+
+  </div>
+
 <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
